More z-index to fix problem with scroll

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,7 +10,7 @@
   padding: 1rem v.$p-general;
   background-color: rgba(v.$c-black, 0.5);
   box-shadow: 0 0 2px 2px rgba(v.$c-black, 0.3);
-  z-index: 5;
+  z-index: 6; //Larger than info card
   transition: background-color 0.05s ease-in;
 
   &--background {
